<resources>
    <string name="app_name">DuLich</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login">Travel Assistant</string>
    <string name="title_user">EMAIL/PHONE</string>
    <string name="title_password">PASSWORD</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>

    <string name="facebook_app_id">763854984088757</string>
    <string name="fb_login_protocol_scheme">fb763854984088757</string>
</resources>
